--- a/CIMPA_school/notebooks/Worksheet1.ipynb
+++ b/CIMPA_school/notebooks/Worksheet1.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "conservative-infection",
    "metadata": {},
    "source": [
     "# Installing and starting Oscar\n",
@@ -20,7 +19,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blank-programmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +28,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "postal-assets",
    "metadata": {},
    "source": [
     "Then you should be able to start OSCAR with the command "
@@ -39,7 +36,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "parallel-glass",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +44,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appreciated-stadium",
    "metadata": {},
    "source": [
     "### Installing jupyter-notebook\n",
@@ -62,7 +57,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indonesian-court",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +66,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compact-speed",
    "metadata": {},
    "source": [
     "### Updating OSCAR during the course\n",
@@ -83,7 +76,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesser-indian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +84,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applied-summit",
    "metadata": {},
    "source": [
     "### Switching back to the official OSCAR version after the course\n",
@@ -104,7 +95,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "grave-characteristic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +105,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "written-toner",
    "metadata": {},
    "source": [
     "# FIrst steps in OSCAR\n",
@@ -128,7 +117,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "drawn-product",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +126,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wrong-porcelain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +136,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inner-copyright",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divine-juvenile",
    "metadata": {},
    "source": [
     "Some others need to be manually created:"
@@ -167,7 +152,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "previous-outside",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +160,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beginning-feedback",
    "metadata": {},
    "source": [
     "Note that the above command returns a tuple `(R, v)` consisting of the polynomial ring `R` and another tuple `v = (x,y,z)` containing its variables.\n",
@@ -187,7 +170,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bound-cookbook",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "becoming-investing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +187,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "australian-wonder",
    "metadata": {},
    "source": [
     "This does not tell us much. But of course, there is more \n",
@@ -218,7 +198,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "crucial-creek",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +206,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "upper-proposal",
    "metadata": {},
    "source": [
     "We can also access the variables via the `getindex`-function \n",
@@ -237,7 +215,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "creative-strap",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +223,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signed-arcade",
    "metadata": {},
    "source": [
     "Any ring and its elements in Oscar have a parent-element relationship. We can check which ring an element belongs to:"
@@ -255,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "basic-correspondence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +240,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "antique-forty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +248,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vital-bahrain",
    "metadata": {},
    "source": [
     "Let us create another ring over a different field. \n",
@@ -284,17 +257,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "developmental-aging",
    "metadata": {},
    "outputs": [],
    "source": [
-    "S, w = PolynomialRing(GF(101), \"w\" => 1:5)"
+    "S, w = polynomial_ring(GF(101), \"w\" => 1:5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "industrial-rabbit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +275,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blessed-mattress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +284,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confident-finance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +292,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-review",
    "metadata": {},
    "source": [
     "## Matrices, ideals, and modules\n",
@@ -336,7 +304,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honey-cooperation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +312,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capable-shark",
    "metadata": {},
    "source": [
     "Note that the separation of a rows entries is done by whitespaces. \n",
@@ -356,7 +322,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "monthly-fields",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +330,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "living-closure",
    "metadata": {},
    "source": [
     "Especially, there is some potential of conflict with the `getindex` method when creating `1x1`-matrices:"
@@ -374,7 +338,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "express-engine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +347,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "partial-confidence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +356,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affected-practice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +364,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infrared-catalog",
    "metadata": {},
    "source": [
     "Matrices can further be processed; for instance, we can take minors:"
@@ -412,7 +372,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "infinite-contrast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +380,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arbitrary-steel",
    "metadata": {},
    "source": [
     "...or submatrices:"
@@ -430,7 +388,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrative-inquiry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +397,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "superb-optimization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +405,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "written-bulletin",
    "metadata": {},
    "source": [
     "If we want a specific minor of a matrix, we have to specify the \n",
@@ -459,7 +414,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "living-silicon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +422,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "champion-dictionary",
    "metadata": {},
    "source": [
     "### Ideals in polynomial rings\n",
@@ -479,7 +432,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "plastic-serve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +440,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boring-judgment",
    "metadata": {},
    "source": [
     "Any ideal can be asked for the generators with which it was once constructed:"
@@ -497,7 +448,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stretch-header",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +456,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supposed-former",
    "metadata": {},
    "source": [
     "We can test ideal membership in `I` for elements of `R`:"
@@ -515,7 +464,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cathedral-influence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +473,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "moved-brooks",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +481,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-france",
    "metadata": {},
    "source": [
     "Moreover, for any given element $f \\in I$, we can ask \n",
@@ -544,7 +490,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tribal-closer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +498,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naughty-dublin",
    "metadata": {},
    "source": [
     "Note that such \"coordinates\" are not unique!"
@@ -561,7 +505,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "derived-nicaragua",
    "metadata": {},
    "source": [
     "## Geometry: Varieties and their singular loci\n",
@@ -576,7 +519,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aerial-facility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +529,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instructional-complement",
    "metadata": {},
    "source": [
     "... and let us find out \n",
@@ -597,7 +538,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "advanced-bhutan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +546,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "portuguese-simulation",
    "metadata": {},
    "source": [
     "So the variety defined by `I` is an algebraic curve. Does it have singular points? Let's apply the jacobian criterion!"
@@ -615,7 +554,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "blind-biodiversity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +564,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accredited-triple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +572,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "educated-fetish",
    "metadata": {},
    "source": [
     "Often, the output is not very readable. Since we are only \n",
@@ -648,7 +584,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "academic-reception",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +592,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tested-lyric",
    "metadata": {},
    "source": [
     "No luck in this case. As a next step, let us try to decompose `J` using the `primary_decomposition`:"
@@ -666,7 +600,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sunrise-cincinnati",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +608,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revolutionary-range",
    "metadata": {},
    "source": [
     "We can wrap this in a new function:"
@@ -684,7 +616,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "previous-sword",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +632,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "genetic-thomson",
    "metadata": {},
    "source": [
     "Let's apply it to our previous ideal and see whether it works."
@@ -710,7 +640,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extensive-davis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +648,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "critical-metabolism",
    "metadata": {},
    "source": [
     "## Local rings in OSCAR\n",
@@ -732,18 +660,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twenty-punishment",
    "metadata": {},
    "outputs": [],
    "source": [
     "R, (x,y,z) = QQ[\"x\", \"y\", \"z\"]\n",
-    "U = complement_of_ideal(R, [0,0,0]) # The multiplicative set of functions not vanishing at the origin\n",
-    "L, map_from_R_to_L = Localization(R, U)"
+    "U = complement_of_point_ideal(R, [0,0,0]) # The multiplicative set of functions not vanishing at the origin\n",
+    "L, map_from_R_to_L = localization(R, U)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "level-reading",
    "metadata": {},
    "source": [
     "Just like, for example, `Int` is casted to `Float` when evaluating `1 + 1.3`, \n",
@@ -755,7 +681,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alone-switch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +690,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "general-classification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +698,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "friendly-neighborhood",
    "metadata": {},
    "source": [
     "Also, mathematical comparison works as expected:"
@@ -783,7 +706,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "involved-horizontal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +714,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "closed-torture",
    "metadata": {},
    "source": [
     "For comparison of the objects in the computer (i.e. in memory), there is the `===` operator. It gives another result:"
@@ -801,7 +722,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "guilty-illness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,7 +730,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "exempt-lesbian",
    "metadata": {},
    "source": [
     "Let us come back to geometry. \n",
@@ -824,7 +743,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "transsexual-flash",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +753,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intense-company",
    "metadata": {},
    "source": [
     "Let us use our above function to find out about the \n",
@@ -845,7 +762,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mounted-jimmy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +771,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quarterly-contamination",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +779,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comfortable-shuttle",
    "metadata": {},
    "source": [
     "`J` is now an ideal in the ring `L`. "
@@ -873,7 +787,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sticky-object",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +795,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "active-separation",
    "metadata": {},
    "source": [
     "In particular, it has another data type working in the background!"
@@ -891,7 +803,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thousand-meter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +812,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "remarkable-deposit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +820,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interracial-consideration",
    "metadata": {},
    "source": [
     "Nevertheless, `J_loc` should behave just like any ideal should behave, i.e. \n",
@@ -928,7 +837,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indirect-america",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +845,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proper-holly",
    "metadata": {},
    "source": [
     "We can also try to use our above method on the localization of `I` directly:"
@@ -946,7 +853,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "speaking-journalist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,25 +862,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cutting-automation",
    "metadata": {},
    "outputs": [],
    "source": [
     "radical_of_singular_locus(I_loc) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.3",
+   "display_name": "Julia 1.8.5",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.3"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
