--- a/CIMPA_school/notebooks/Worksheet4.ipynb
+++ b/CIMPA_school/notebooks/Worksheet4.ipynb
@@ -3,18 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rocky-semester",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "using Oscar"
+    "using Revise, Oscar"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "single-afghanistan",
    "metadata": {},
    "source": [
     "# Worksheet 4: Deformations of IHS, ICIS, and beyond"
@@ -22,7 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animal-sight",
    "metadata": {},
    "source": [
     "## Versal deformations of isolated hypersurface singularities\n",
@@ -38,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "infinite-animation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +49,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "younger-finding",
    "metadata": {},
    "source": [
     "Now we can manually gather those monomials in the monomial diagram which are not in the leading ideal \n",
@@ -65,7 +60,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heated-rental",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +83,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "medieval-billion",
    "metadata": {},
    "source": [
     "Does it reproduce the same result? Let's check."
@@ -98,7 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equivalent-preparation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +99,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "robust-richmond",
    "metadata": {},
    "source": [
     "We can now write down a semi-universal unfolding of $f$. First, we need to introduce new \n",
@@ -117,11 +108,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honey-coating",
    "metadata": {},
    "outputs": [],
    "source": [
-    "function semi_universal_unfolding_local(f::MPolyElem)\n",
+    "function semi_universal_unfolding_local(f::MPolyRingElem)\n",
     "    R = parent(f)\n",
     "    J = ideal(R, minors(jacobi_matrix(f), 1))\n",
     "    mon_base = kbase_local(J)\n",
@@ -142,7 +132,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "multiple-being",
    "metadata": {},
    "source": [
     "Let us check that it gives the expected result."
@@ -151,7 +140,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cardiac-pierce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +148,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "anonymous-kentucky",
    "metadata": {},
    "source": [
     "## The discriminant of an IHS"
@@ -168,7 +155,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "olive-helping",
    "metadata": {},
    "source": [
     "Let $F(x; t) \\colon (\\mathbb C^n, 0) \\times (\\mathbb C^\\mu,0) \\to (\\mathbb C,0)$ be the semi-universal unfolding \n",
@@ -185,11 +171,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "posted-skiing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "function Oscar.jacobi_matrix(f::MPolyElem, x::Vector{T}) where {T<:MPolyElem}\n",
+    "function Oscar.jacobi_matrix(f::MPolyRingElem, x::Vector{T}) where {T<:MPolyRingElem}\n",
     "    R = parent(f)\n",
     "    all(x->(x in gens(R)), x) || error(\"The given elements are not all ring variables\")\n",
     "    n = length(x)\n",
@@ -203,7 +188,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "professional-pacific",
    "metadata": {},
    "source": [
     "Having the above method, we can manually compute the equation for the discriminant $\\Delta$ using elimination \n",
@@ -213,7 +197,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrow-windsor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,18 +204,17 @@
     "JF = ideal(RU, minors(jacobi_matrix(F, X), 1)) + ideal(RU, F) # The relative Tjurina ideal \n",
     "\n",
     "# We need an elemination ordering for the projection to the deformation base\n",
-    "o = degrevlex(gens(RU)[1:3])*negdegrevlex(gens(RU)[4:5])\n",
+    "o = degrevlex(gens(RU)[1:3])*negdegrevlex(gens(RU)[4:end])\n",
     "\n",
     "# compute a standard basis w.r.t this elimination ordering\n",
-    "SB = std_basis(JF, o)\n",
+    "SB = standard_basis(JF, ordering=o)\n",
     "\n",
     "# collect only those elements which are contained in the subring of the base\n",
-    "disc_eqns = [f for f in SB if all(v->!(divides(leading_monomial(f, o), v))[1], gens(RU)[1:3])]"
+    "disc_eqns = [f for f in SB if all(v->!(divides(leading_monomial(f, ordering=o), v))[1], gens(RU)[1:3])]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dirty-arabic",
    "metadata": {},
    "source": [
     "The specialists among us may recognize that this is indeed the formula for the discriminant \n",
@@ -245,7 +227,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amino-journal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +235,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beautiful-paintball",
    "metadata": {},
    "source": [
     "What a mess! But luckily, we already picked out some special points on $\\Delta$ for you; \n",
@@ -270,7 +250,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secret-pocket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +263,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bronze-precipitation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +275,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assumed-stroke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +286,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wrapped-transsexual",
    "metadata": {},
    "source": [
     "Let us analyze the singularities in the fibers for either one of the three parameters. First $t_1$:"
@@ -318,7 +294,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pressed-gates",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +303,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "chicken-profile",
    "metadata": {},
    "source": [
     "So $f_1 = F(x,y,z; t_1)$ has an isolated singularity at the origin. Which one is it?"
@@ -337,7 +311,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equal-diagnosis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +319,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "combined-gardening",
    "metadata": {},
    "source": [
     "In fact, the whole regular stratum of $\\Delta$ is characterized by the fibers having one single $A_1$-singularity.\n",
@@ -357,7 +329,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strange-georgia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +338,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acceptable-maximum",
    "metadata": {},
    "source": [
     "The `classify` command can only analyze singularities at the origin (because it is using local orderings in the background) and, hence, we first have to shift our function."
@@ -376,7 +346,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "naval-attendance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +355,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "criminal-tucson",
    "metadata": {},
    "source": [
     "So we see that on this stratum of $\\Delta$ the fibers have precisely one $A_2$ singularity."
@@ -395,7 +363,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "large-tracy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +372,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "resistant-skill",
    "metadata": {},
    "source": [
     "Here, we have two singularities and therefore need two shifts."
@@ -414,7 +380,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "split-reynolds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +390,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defensive-southeast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +399,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handled-daisy",
    "metadata": {},
    "source": [
     "We conclude that on the third stratum, the fibers have two singularities of type $A_1$."
@@ -443,7 +406,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minute-cookie",
    "metadata": {},
    "source": [
     "## Deformations of complete intersections\n",
@@ -454,7 +416,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handed-headset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +425,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "every-lodge",
    "metadata": {},
    "source": [
     "The normal module is defined as $N = \\mathrm{Hom}_R(I, R/I)$. OSCAR knows how to handle `Hom`-modules, \n",
@@ -474,7 +434,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-worth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +445,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threaded-brook",
    "metadata": {},
    "source": [
     "The last command is a bit subtle. It returns a pair `(N, vec_to_hom)` consisting of the actual \n",
@@ -502,7 +460,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "residential-symphony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +469,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "progressive-announcement",
    "metadata": {},
    "source": [
     "We can try to apply `v` to an element of `Imod` directly, but this will fail."
@@ -521,7 +477,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assigned-intensity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +486,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conditional-death",
    "metadata": {},
    "source": [
     "Converting `v` into a homomorphism makes everything work."
@@ -540,7 +494,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authorized-momentum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +504,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hungry-survival",
    "metadata": {},
    "source": [
     "We proceed with the construction of the $T^1(S_5)$. We need to divide by the image of the jacobian matrix."
@@ -560,7 +512,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "involved-commissioner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +521,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "executed-victor",
    "metadata": {},
    "source": [
     "Now we need the complicated map \n",
@@ -582,7 +532,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "professional-toddler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +544,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "refined-kingston",
    "metadata": {},
    "source": [
     "## Versal deformations of arbitrary isolated singularities\n",
@@ -608,7 +556,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tough-banana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +566,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "referenced-bible",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +575,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-favorite",
    "metadata": {},
    "source": [
     "Apart from the verbose Singular output during the computation, this returns us a pair of two maps: the inclusion of \n",
@@ -640,7 +585,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hispanic-interstate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +594,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tired-controversy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +603,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "impressed-satisfaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +612,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "biblical-lease",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -678,15 +619,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.3",
+   "display_name": "Julia 1.8.5",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.3"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
