--- a/CIMPA_school/notebooks/Worksheet2.ipynb
+++ b/CIMPA_school/notebooks/Worksheet2.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "statistical-approach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +11,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "refined-reporter",
    "metadata": {},
    "source": [
     "# Worksheet 2: Dimension, multiplicities, etc.\n",
@@ -27,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "limiting-english",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +36,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "potential-patio",
    "metadata": {},
    "source": [
     "With the following command we create a *local* ordering on the variables of $R$."
@@ -48,7 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compact-building",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "departmental-month",
    "metadata": {},
    "source": [
     "We can use this to produce a *standard basis* of the ideal $I$ for this ordering. "
@@ -66,16 +60,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "animated-defensive",
    "metadata": {},
    "outputs": [],
    "source": [
-    "std_I = std_basis(I, o)"
+    "std_I = standard_basis(I, ordering=o)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "previous-library",
    "metadata": {},
    "source": [
     "For a given ordering, we can also ask for the *leading ideal* of $I$ which is simply the ideal generated \n",
@@ -85,7 +77,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "imposed-print",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +85,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "allied-penny",
    "metadata": {},
    "source": [
     "By construction, the leading ideal is a *homogeneous* ideal for this ordering. We can pass to the graded quotient ring for this ideal and compute the Hilbert polynomial."
@@ -103,7 +93,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brutal-violation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +104,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documentary-series",
    "metadata": {},
    "source": [
     "We must remark that here we computed the Hilbert *polynomial* $P(t)$ of $A := R_{\\mathrm gr}/ I_{\\mathrm gr}$. It is the unique polynomial \n",
@@ -130,7 +118,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "severe-following",
    "metadata": {},
    "source": [
     "Note that the Hilbert polynomial comes with a new variable in a new ring."
@@ -139,7 +126,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reverse-receiver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +134,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "organic-assets",
    "metadata": {},
    "source": [
     "Also the Hilbert series is available "
@@ -157,7 +142,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "different-thong",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +150,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grand-diamond",
    "metadata": {},
    "source": [
     "Accessing the coefficients of the Hilbert polynomial is rather tedious. The reason is that \n",
@@ -176,7 +159,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "female-leeds",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +167,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incomplete-mumbai",
    "metadata": {},
    "source": [
     "How can we use such iterators? Well, we can, for example, iterate over them in `for`-loops."
@@ -194,7 +175,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "provincial-macintosh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +185,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eleven-cowboy",
    "metadata": {},
    "source": [
     "If we do not care about such features and only want everything in a list, we can just feed the iterator to `collect`."
@@ -214,7 +193,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "laden-plumbing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +201,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grave-eleven",
    "metadata": {},
    "source": [
     "Or just take any other shortcut to the information of interest:"
@@ -232,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "negative-quantity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +217,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comparable-imaging",
    "metadata": {},
    "source": [
     "## The Milnor number\n",
@@ -252,7 +227,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "challenging-burst",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +236,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wicked-gibraltar",
    "metadata": {},
    "source": [
     "We can implement the functionality from the lecture in various functions."
@@ -271,7 +244,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flush-emperor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +256,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forbidden-induction",
    "metadata": {},
    "source": [
     "Note that we used a rather involved method as a black box: `singular_vdim`."
@@ -293,7 +264,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "printable-faculty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +272,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decreased-junior",
    "metadata": {},
    "source": [
     "So what is happening there under the hood? \n",
@@ -314,7 +283,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "material-bench",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +295,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forced-linux",
    "metadata": {},
    "source": [
     "The above is the *global* milnor number. If we are only interested in singularities \n",
@@ -337,7 +304,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ultimate-guarantee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +315,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "express-worship",
    "metadata": {},
    "source": [
     "We see that the singularity at the origin has Milnor number $1$ instead of the global Milnor number $4$. \n",
@@ -359,7 +324,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "romantic-enzyme",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +332,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sporting-vitamin",
    "metadata": {},
    "source": [
     "Similarly, we could do the same at any other rational point $p \\in \\mathbf A^2$, for instance at the other singular points $(0, 1)$ or $(1, 0)$ of $f$. To this end, we have to apply an isomorphism $\\varphi \\colon R \\to R$ that takes $p$ to the origin, translate the ideal along $\\varphi$ and repeat the computations for the local ordering. \n",
@@ -378,18 +341,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "coordinate-better",
    "metadata": {},
    "outputs": [],
    "source": [
-    "L, _ = Localization(R, complement_of_ideal(R, [1, 0]))\n",
+    "L, _ = Localization(R, complement_of_point_ideal(R, [1, 0]))\n",
     "J_loc = L(J)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conceptual-budget",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +361,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "anticipated-partition",
    "metadata": {},
    "source": [
     "Note that `shifted_ideal` returns an ideal in the original polynomial ring $R$ and not in the localization $L$!"
@@ -409,7 +369,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "three-designation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +377,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "literary-explanation",
    "metadata": {},
    "source": [
     "## The Tjurina number\n",
@@ -431,7 +389,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rough-breast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +401,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gothic-bulgarian",
    "metadata": {},
    "source": [
     "Note that this is equal to the Milnor number of $f$. This is due to the fact that $f$ is *quasi-homogeneous*. If the function does not have this property, the Milnor and Tjurina number can differ:"
@@ -453,7 +409,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "immediate-scheme",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +420,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surrounded-controversy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +430,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "transparent-triple",
    "metadata": {},
    "source": [
     "What a difference! But wait -- did the Milnor number really jump up that much compared to $f_0$? Somehow, it did, but *globally* and not at the origin!"
@@ -485,17 +438,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "exclusive-happening",
    "metadata": {},
    "outputs": [],
    "source": [
-    "L, _ = Localization(R, complement_of_ideal(R, [0, 0]))\n",
+    "L, _ = Localization(R, complement_of_point_ideal(R, [0, 0]))\n",
     "Oscar.milnor_number(L(f))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "shaped-reggae",
    "metadata": {},
    "source": [
     "Still, we see a difference of $1$ between these two numbers."
@@ -503,7 +454,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "possible-validity",
    "metadata": {},
    "source": [
     "## Milnor numbers of ICIS and the Le-Greuel formula\n",
@@ -516,7 +466,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "offensive-effectiveness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +474,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unlimited-israeli",
    "metadata": {},
    "source": [
     "Let us compute the Milnor number(s) for the $S_5$ singularity."
@@ -534,7 +482,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "monthly-accountability",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +494,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heated-miami",
    "metadata": {},
    "source": [
     "Next, we need to construct the isolated hypersurface singularity\n",
@@ -557,7 +503,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lucky-lucas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +514,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protected-battle",
    "metadata": {},
    "source": [
     "Let us verify that this is indeed an isolated hypersurface singularity."
@@ -578,7 +522,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "genuine-waste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +531,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parliamentary-ethnic",
    "metadata": {},
    "source": [
     "If we want to know more about the singularity at the origin, we may ask OSCAR (or more precisely SINGULAR in the background) to classify it."
@@ -597,7 +539,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "integrated-cricket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +548,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "historic-selling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +556,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indian-nitrogen",
    "metadata": {},
    "source": [
     "Now comes the truely determinantal part of the formula."
@@ -625,7 +564,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sorted-airplane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +574,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virgin-cambodia",
    "metadata": {},
    "source": [
     "Hence, the total Milnor number is $\\mu(S_5) = \\mu_0 - \\mu_1 = 6 - 1 = 5$."
@@ -644,7 +581,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minute-cookie",
    "metadata": {},
    "source": [
     "## Deformations of complete intersections\n",
@@ -655,7 +591,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handed-headset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +600,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "every-lodge",
    "metadata": {},
    "source": [
     "The normal module is defined as $N = \\mathrm{Hom}_R(I, R/I)$. OSCAR knows how to handle `Hom`-modules, \n",
@@ -675,7 +609,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "strategic-worth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +620,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threaded-brook",
    "metadata": {},
    "source": [
     "The last command is a bit subtle. It returns a pair `(N, vec_to_hom)` consisting of the actual \n",
@@ -703,7 +635,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "residential-symphony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +644,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "progressive-announcement",
    "metadata": {},
    "source": [
     "We can try to apply `v` to an element of `Imod` directly, but this will fail."
@@ -722,7 +652,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assigned-intensity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -732,7 +661,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conditional-death",
    "metadata": {},
    "source": [
     "Converting `v` into a homomorphism makes everything work."
@@ -741,7 +669,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authorized-momentum",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +679,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hungry-survival",
    "metadata": {},
    "source": [
     "We proceed with the construction of the $T^1(S_5)$. We need to divide by the image of the jacobian matrix."
@@ -761,7 +687,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "involved-commissioner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +696,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "executed-victor",
    "metadata": {},
    "source": [
     "Now we need the complicated map \n",
@@ -783,28 +707,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "professional-toddler",
    "metadata": {},
    "outputs": [],
    "source": [
+    "n = ngens(R)\n",
+    "Fn = free_module(R, n)\n",
     "theta = hom(Fn, N, [preimage(vec_to_hom, hom(Imod, RmodI, [Df[i,j]*RmodI[1] for j in 1:ngens(Imod)])) for i in 1:ngens(R)])\n",
     "S, _ = image(theta)\n",
     "T1, _ = quo(N, S)\n",
     "kbase(T1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.3",
+   "display_name": "Julia 1.8.5",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.3"
+   "version": "1.8.5"
   }
  },
  "nbformat": 4,
