Update branch info.

--- a/CIMPA_school/notebooks/Worksheet1.ipynb
+++ b/CIMPA_school/notebooks/Worksheet1.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "using Pkg\n",
-    "]add https://github.com/HechtiDerLachs/Oscar.jl#CIMPA_school"
+    "]add https://github.com/HechtiDerLachs/Oscar.jl#CIMPA_school23"
    ]
   },
   {
