--- a/CIMPA_school/notebooks/Worksheet2.ipynb
+++ b/CIMPA_school/notebooks/Worksheet2.ipynb
@@ -113,7 +113,7 @@
     "The Hilbert-Samuel polynomial, on the other hand, is the unique polynomial $Q(t)$ such that for $k \\gg 1$, $k \\in \\mathbb N$ one has $Q(k) = \\dim_{\\mathbb C} A / \\mathfrak m^k$. \n",
     "\n",
     "Since $A / \\mathfrak m^k \\cong A_0 \\oplus A_1 \\oplus \\dots \\oplus A_{k-2} \\oplus A_{k-1}$ as vector spaces, \n",
-    "it is easy to see that $Q(k) = P(k-1) - P(k-2)$ and $P(k) = \\sum_{i=0}^{k-1} P(i)$."
+    "it is easy to see that $P(k) = Q(k-1) - Q(k-2)$ and $Q(k) = \\sum_{i=0}^{k-1} P(i)$."
    ]
   },
   {
@@ -250,7 +250,8 @@
     "function milnor_number(f::MPolyElem)\n",
     "    R = parent(f)\n",
     "    J = ideal(R, minors(jacobi_matrix(f), 1))\n",
-    "    return singular_vdim(J)\n",
+    "    M, pr = quo(R, J)\n",
+    "    return vector_space_dimension(M)\n",
     "end"
    ]
   },
@@ -258,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we used a rather involved method as a black box: `singular_vdim`."
+    "Note that we used a combinatorially rather involved method as a black box: `vector_space_dimension`."
    ]
   },
   {
@@ -276,7 +277,7 @@
    "source": [
     "So what is happening there under the hood? \n",
     "\n",
-    "Basically, `singular_vdim` is counting the monomials 'below' the generators of the leading ideal.\n",
+    "Basically, `vector_space_dimension` is counting the monomials 'below' the generators of the leading ideal.\n",
     "Let's see whether we can manually confirm the result."
    ]
   },
@@ -289,8 +290,17 @@
     "R = parent(f)\n",
     "J = ideal(R, minors(jacobi_matrix(f), 1))\n",
     "o = degrevlex(gens(R))\n",
-    "leadJ = leading_ideal(J, ordering=o)\n",
-    "singular_vdim(leadJ)"
+    "LJ = leadJ = leading_ideal(J, ordering=o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q, _ = quo(R, LJ)\n",
+    "vector_space_dimension(Q)"
    ]
   },
   {
@@ -310,7 +320,7 @@
     "R = parent(f)\n",
     "J = ideal(R, minors(jacobi_matrix(f), 1))\n",
     "o = negdegrevlex(gens(R))\n",
-    "leading_ideal(J, ordering=o)"
+    "LJ = leading_ideal(J, ordering=o)"
    ]
   },
   {
@@ -327,15 +337,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "singular_vdim_local(J)"
+    "Q, _ = quo(R, LJ)\n",
+    "vector_space_dimension(Q)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, we could do the same at any other rational point $p \\in \\mathbf A^2$, for instance at the other singular points $(0, 1)$ or $(1, 0)$ of $f$. To this end, we have to apply an isomorphism $\\varphi \\colon R \\to R$ that takes $p$ to the origin, translate the ideal along $\\varphi$ and repeat the computations for the local ordering. \n",
-    "Luckily, this has already been wrapped up in the hidden (i.e. non-exported) function `Oscar.shifted_ideal` "
+    "Similarly, we could do the same at any other rational point $p \\in \\mathbf A^2$, for instance at the other singular points $(0, 1)$ or $(1, 0)$ of $f$. To this end, we have to apply an isomorphism $\\varphi \\colon R \\to R$ that takes $p$ to the origin, translate the ideal along $\\varphi$ and repeat the computations for the local ordering. This is what happens under the hood for `vector_space_dimension` when applied to localized algebras of this type."
    ]
   },
   {
@@ -356,14 +366,9 @@
    "source": [
     "Df = jacobi_matrix(L(f))\n",
     "J = ideal(L, minors(Df, 1))\n",
-    "J_shift = Oscar.shifted_ideal(J)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that `shifted_ideal` returns an ideal in the original polynomial ring $R$ and not in the localization $L$!"
+    "@show J\n",
+    "Q, _ = quo(L, J)\n",
+    "vector_space_dimension(Q)"
    ]
   },
   {
@@ -372,7 +377,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "singular_vdim_local(J_shift)"
+    "I = ideal(L,[x^5*(x-1),y^2])\n",
+    "Q1, _ = quo(L,I)\n",
+    "vector_space_dimension(Q1)"
    ]
   },
   {
@@ -395,7 +402,9 @@
     "R, (x,y) = QQ[\"x\", \"y\"]\n",
     "f0 = x^5 + y^5\n",
     "J0 = ideal(R, f0) + ideal(R, minors(jacobi_matrix(f0), 1))\n",
-    "singular_vdim_local(J0)\n",
+    "L, _ = localization(R, complement_of_point_ideal(R, [0, 0]))\n",
+    "QJ0, _ = quo(L, L(J0))\n",
+    "vector_space_dimension(QJ0)\n",
     "# milnor_number(f0) # run for comparison"
    ]
   },
@@ -414,7 +423,8 @@
    "source": [
     "f1 = x^5 + y^5 + x^3*y^3\n",
     "J1 = ideal(R, f1) + ideal(R, minors(jacobi_matrix(f1), 1))\n",
-    "singular_vdim_local(J1)"
+    "QJ1, _ = quo(L, L(J1))\n",
+    "vector_space_dimension(QJ1)"
    ]
   },
   {
@@ -442,7 +452,7 @@
    "outputs": [],
    "source": [
     "L, _ = Localization(R, complement_of_point_ideal(R, [0, 0]))\n",
-    "Oscar.milnor_number(L(f))"
+    "Oscar.milnor_number(L(f1))"
    ]
   },
   {
@@ -487,9 +497,21 @@
    "source": [
     "R, (x,y,z) = QQ[\"x\", \"y\", \"z\"]\n",
     "I = ideal(R, [x*y, x^2 + y^2 + z^2])\n",
+    "RQ,_ = quo(R,I)\n",
     "# Let us first check that this is really an ICIS\n",
-    "@show dim(I)\n",
-    "@show radical(singular_slocus(I))"
+    "X, _ = germ_at_point(R,[0, 0, 0])\n",
+    "X0 = subscheme(X, OO(X)(I))\n",
+    "dim(X0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z, inc = singular_locus(X0)\n",
+    "image_ideal(inc)"
    ]
   },
   {
@@ -509,7 +531,7 @@
     "a = [rand(QQ, -100:100) for i in 1:2]\n",
     "h = sum([c*g for (c, g) in zip(a, gens(I))])\n",
     "I1 = ideal(R, h)\n",
-    "issubset(I1, I)"
+    "X1 = subscheme(X,OO(X)(I1))"
    ]
   },
   {
@@ -525,8 +547,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@show dim(I1)\n",
-    "@show radical(singular_slocus(I1))"
+    "Z, inc = singular_locus(X1)\n",
+    "image_ideal(inc)"
    ]
   },
   {
@@ -569,7 +591,8 @@
    "source": [
     "M = jacobi_matrix(gens(I))\n",
     "J = ideal(R, minors(M, 2)) + I1\n",
-    "mu0 = singular_vdim_local(J)"
+    "Q2,_ = quo(R,J)\n",
+    "mu0 = vector_space_dimension(Q2)"
    ]
   },
   {
@@ -595,6 +618,7 @@
    "outputs": [],
    "source": [
     "R, (x,y,z) = QQ[\"x\", \"y\", \"z\"]\n",
+    "#R, _ = localization(R, complement_of_point_ideal(R, [0, 0, 0]))\n",
     "I = ideal(R, [x*y, x^2 + y^2 + z^2])"
    ]
   },
@@ -715,7 +739,7 @@
     "theta = hom(Fn, N, [preimage(vec_to_hom, hom(Imod, RmodI, [Df[i,j]*RmodI[1] for j in 1:ngens(Imod)])) for i in 1:ngens(R)])\n",
     "S, _ = image(theta)\n",
     "T1, _ = quo(N, S)\n",
-    "kbase(T1)"
+    "V, iso = vector_space(QQ, T1)"
    ]
   },
   {
@@ -723,7 +747,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "iso.(gens(V))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preimage(iso, iso(V[1]))"
+   ]
   }
  ],
  "metadata": {
