--- a/CIMPA_school/notebooks/Worksheet3.ipynb
+++ b/CIMPA_school/notebooks/Worksheet3.ipynb
@@ -362,8 +362,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "B = out[1][1]\n",
-    "Rsubst, Isubst, pb = elimpart(modulus(B))"
+    "B = out[1][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BB, iso = simplify(B)\n",
+    "small_generating_set(modulus(BB))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iso.(gens(B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(inverse(iso)).(gens(BB))"
    ]
   },
   {
@@ -455,29 +482,6 @@
    "source": [
     "We see that, indeed, normalization does nothing: No extra variables, no changes in the equations, nothing. Nevertheless, the space is singular:"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "radical(singular_slocus(I))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
